added an excerpt section underneath the video thumbnails

--- a/inc/css/modal.css
+++ b/inc/css/modal.css
@@ -21,10 +21,9 @@
 .video-item {
     margin-bottom: 25px;
 }
-
 h4.video-title {
     margin-top: -40px;
-    margin-bottom: 0;
+    margin-bottom: 5px;
     background-color: rgba(0,0,0,0.6);
     position: relative;
     height: 40px;
